<resources>
    <string name="app_name">WanAndroid</string>
    <string name="jump_to_main">跳过</string>
    <string name="main_title">玩Android</string>
    <string name="home_pager">首页</string>
    <string name="knowledge_hierarchy">知识体系</string>
    <string name="tab_project">项目</string>
    <string name="tab_gank">分类</string>
    <string name="tab_mine">我的</string>
    <string name="data_loading">努力加载中...</string>
    <string name="data_load_error">加载失败,请重试~</string>
    <string name="exit_system">再按一次退出</string>
    <string name="share_view">shareView</string>
    <string name="project">项目</string>
    <string name="hot">热门</string>
    <string name="reload_content">点击重新加载</string>
    <string name="share_title">分享</string>
    <string name="like_title">收藏</string>
    <string name="already_collect_title">已收藏</string>
    <string name="browser_title">使用系统浏览器打开</string>
    <string name="load_more_no_data">没有更多数据了~</string>
    <string name="no_more_data">暂时还没有数据~</string>
    <string name="please_enter_username">请输入用户名</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="please_reenter_password">请再次输入密码</string>
    <string name="register">注册</string>
    <string name="no_account_register">还没账号?点此注册</string>
    <string name="login">登录</string>
    <string name="click_head_login">点击头像登录</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_label">我的书签</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="logout_sure">确定要退出登录吗?</string>
    <string name="clear_history">清空历史记录</string>
    <string name="delete_history_sure">确定要删除历史记录吗?</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="hot_search">热搜</string>
    <string name="search_history">搜索历史</string>
    <string name="clear">清空</string>
    <string name="search_title">Search</string>
    <string name="input_search_content">输入你想查询的内容..</string>
    <string name="hot_address">常用网站</string>
    <string name="username_incorrect">用户名或密码长度必须大于6位</string>
    <string name="password_incorrect">两次输入的密码不一致</string>
    <string name="register_ok">注册成功,快去登录吧</string>
    <string name="auto_login_ok">自动登陆成功</string>
    <string name="login_ok">登陆成功</string>
    <string name="login_err">登陆失败</string>
    <string name="logout_ok">登出成功</string>
    <string name="please_login">请先登录</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_fail">收藏失败</string>
    <string name="cancel_collect_success">取消收藏成功</string>
    <string name="cancel_collect_fail">取消收藏失败</string>
    <string name="about_content"><![CDATA[
        <h2>网站内容</h2>
        <p>\t\t本网站每天新增20~30篇优质文章，并加入到现有分类中，力求整理出一份优质而又详尽的知识体系，闲暇时间不妨上来学习下知识；除此以外，并为大家提供平时开发过程中常用的工具以及常用的网址导航。</p>
        <p>\t\t当然这只是我们目前的功能，未来我们将提供更多更加便捷的功能…</p>
        <p>\t\t如果您有任何好的建议：</p>
            <br/>\t\t\t\t关于网站排版
            <br/>\t\t\t\t关于新增常用网址以及工具
            <br/>\t\t\t\t未来你希望增加的功能等
        <p>\t\t可以在 <a href="https://github.com/hongyangAndroid/wanandroid" target="_blank">https://github.com/hongyangAndroid/xueandroid</a> 项目中以issue的形式提出，我将及时跟进。</p>
        <p>\t\t如果您希望长期关注本站，可以加入我们的QQ群：<b>591683946</b></p>
        <h2>源码位置</h2>
        <p>\t\t本软件开源，如果你发现任何错误，不要犹豫，马上点击<a href="https://github.com/sheajin/WanAndroid" target="_blank">GitHub</a>，在上面发起<b>issue</b>或者提交<b>pull request</b>。</p>
    ]]></string>
    <string name="music">每日推荐</string>
    <string name="video">假装是斗鱼</string>
    <string name="drawer_open">打开侧滑菜单</string>
    <string name="drawer_close">关闭侧滑菜单</string>

    <!--ijkPlayer-->
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="live_loading">直播视频加载中...</string>
    <string name="full_screen">全屏</string>
    <string name="edit_danmu">在这里输入弹幕</string>
    <string name="get_live_fail">获取播放信息失败,请重新载入</string>
    <string name="internet_error">网络出问题了..</string>
    <string name="live_collect">关注</string>
    <string name="choose_cate">选择分类</string>
    <string name="all">全部</string>
    <string name="android">Android</string>
    <string name="app">app</string>
    <string name="js">前端</string>
    <string name="rest">休息视频</string>
    <string name="extra">拓展资源</string>
    <string name="net_ease_ui">网易云UI</string>
    <string name="douyu">斗鱼直播</string>
    <string name="recommend">每日推荐</string>
    <string name="rank">排行榜</string>
    <string name="resource_fail">资源加载失败</string>
    <string name="save">保存</string>
    <string name="open_storage">请开启存储权限</string>
    <string name="douban_hot">热映榜</string>
    <string name="top250">豆瓣电影Top250</string>
    <string name="ever">从前现在过去了再不来~</string>
    <string name="another_name">另称</string>
    <string name="introduce">剧情简介</string>
    <string name="actor">导演&amp;演员</string>
    <string name="movie_score">评分: %.1f</string>
    <string name="movie_director">导演: %s</string>
    <string name="movie_actor">演员: %s</string>
    <string name="movie_type">类型: %s</string>
    <string name="movie_time">时间: %s</string>
    <string name="movie_details">影片详情</string>
    <string name="actors">演员</string>
    <string name="hot_wx_article">热门公众号</string>
    <!---->
</resources>
