<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tab_main"
        android:enabled="true"
        android:icon="@drawable/icon_home_pager_not_selected"
        android:title="@string/home_pager"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_knowledge"
        android:enabled="true"
        android:icon="@drawable/icon_knowledge_hierarchy_not_selected"
        android:title="@string/knowledge_hierarchy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_project"
        android:enabled="true"
        android:icon="@drawable/icon_project_not_selected"
        android:title="@string/tab_project"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_gank"
        android:enabled="true"
        android:icon="@drawable/icon_navigation_not_selected"
        android:title="@string/tab_gank"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_mine"
        android:enabled="true"
        android:icon="@drawable/icon_navigation_mine"
        android:title="@string/tab_mine"
        app:showAsAction="ifRoom" />

</menu>