<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_60"
        android:layout_marginStart="@dimen/dp_60"
        android:background="@drawable/drawable_dialog_logout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:visibility="gone"
            tools:text="标题" />

        <TextView
            android:id="@+id/dialog_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/logout_sure" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_2"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/dialog_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel" />

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/dialog_sure"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sure" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>