<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.xy.wanandroid.ui.gank.activity.MovieDetailsActivity">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/view_introduce"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_240">

                <!--高斯模糊背景-->
                <ImageView
                    android:id="@+id/image_blur"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <!--影片详情介绍-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_60"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/dp_10">

                    <android.support.v7.widget.CardView
                        android:id="@+id/view_preview"
                        android:layout_width="@dimen/dp_120"
                        android:layout_height="@dimen/dp_160"
                        app:cardBackgroundColor="@color/white_255"
                        app:cardCornerRadius="@dimen/dp_4"
                        app:cardElevation="0px"
                        app:cardPreventCornerOverlap="false">

                        <ImageView
                            android:id="@+id/image_preview"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@color/black_15" />

                    </android.support.v7.widget.CardView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_20"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/dp_12"
                            android:layout_marginTop="@dimen/dp_4"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_14"
                            tools:text="@string/movie_score" />

                        <TextView
                            android:id="@+id/tv_director"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/dp_12"
                            android:layout_marginTop="@dimen/dp_4"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_14"
                            tools:text="@string/movie_director" />

                        <TextView
                            android:id="@+id/tv_actor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/dp_12"
                            android:layout_marginTop="@dimen/dp_4"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_14"
                            tools:text="@string/movie_actor" />

                        <TextView
                            android:id="@+id/tv_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/dp_12"
                            android:layout_marginTop="@dimen/dp_4"
                            android:ellipsize="end"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_14"
                            tools:text="@string/movie_type" />

                        <TextView
                            android:id="@+id/tv_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_4"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_15"
                            tools:text="@string/movie_time" />

                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>

            <!--电影简介 下半部分-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_4"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="4dp">

                    <ImageView
                        android:layout_width="3dp"
                        android:layout_height="20dp"
                        android:background="@drawable/drawable_circle_view" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_6"
                        android:text="@string/another_name"
                        android:textColor="@color/black_90"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_another_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_12"
                    tools:text="sssss" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_4"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="4dp">

                    <ImageView
                        android:layout_width="3dp"
                        android:layout_height="20dp"
                        android:background="@drawable/drawable_circle_view" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_6"
                        android:text="@string/introduce"
                        android:textColor="@color/black_90"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_introduce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_12"
                    tools:text="sssss" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_4"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="4dp">

                    <ImageView
                        android:layout_width="3dp"
                        android:layout_height="20dp"
                        android:background="@drawable/drawable_circle_view" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_6"
                        android:text="@string/actor"
                        android:textColor="@color/black_90"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <!--顶部标题栏-->
    <LinearLayout
        android:id="@+id/view_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:alpha="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_26"
            android:layout_marginLeft="@dimen/dp_10"
            android:src="@drawable/back_white" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/movie_details"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

</RelativeLayout>
