<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.ui.login.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/theme"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/icon_back"
        app:titleTextColor="@color/white_255" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_register"
        android:layout_marginEnd="@dimen/dp_60"
        android:layout_marginStart="@dimen/dp_60"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/drawable_register_item"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_20"
                android:src="@drawable/icon_share" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_15"
                android:background="@null"
                android:gravity="center|left"
                android:hint="@string/please_enter_username"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/drawable_register_item"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_20"
                android:src="@drawable/icon_share" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_15"
                android:background="@null"
                android:gravity="center|left"
                android:hint="@string/please_enter_password"
                tools:ignore="RtlHardcoded,TextFields" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/drawable_register_item"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_20"
                android:src="@drawable/icon_share" />

            <EditText
                android:id="@+id/et_ensure_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_15"
                android:background="@null"
                android:gravity="center|left"
                android:hint="@string/please_reenter_password"
                tools:ignore="RtlHardcoded,TextFields" />

        </LinearLayout>

        <Button
            android:id="@+id/tv_register"
            android:background="@drawable/drawable_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_30"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white_255"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

</RelativeLayout>
